Fixing tests for changes to the participation tables
