# crime_data/common/marshmallow_schemas.py
@@ -865,7 +865,7 @@ class IncidentViewCountSchema(Schema):
     victim_type_name = marsh_fields.String(dump_only=True)
 
 
-class AgencyParticipationSchema(Schema):
+class AgencyParticipationSchema(ma.ModelSchema):
     class Meta:
         model = newmodels.AgencyParticipation
         exclude = ('agency_id', )
@@ -996,7 +996,7 @@ class StateDetailResponseSchema(ma.ModelSchema):
         model = cdemodels.CdeRefState
         ordered = True
         fields = ('state_id', 'name', 'postal_abbr', 'fips_code', 'current_year',
-                  'reporting_agencies', 'covered_population', 'reporting_rate',
+                  'participating_agencies', 'participation_rate',
                   'total_population', 'total_agencies', 'police_officers', 'counties',
                   'participation', )
 
@@ -1004,9 +1004,9 @@ class StateDetailResponseSchema(ma.ModelSchema):
     postal_abbr = marsh_fields.String(attribute='state_postal_abbr')
     fips_code = marsh_fields.String(attribute='state_fips_code')
     total_population = marsh_fields.Integer()
-    covered_population = marsh_fields.Integer()
     total_agencies = marsh_fields.Integer()
-    reporting_agencies = marsh_fields.Integer()
+    participating_agencies = marsh_fields.Integer()
+    participation_rate = marsh_fields.Float()
     police_officers = marsh_fields.Integer()
     current_year = marsh_fields.Integer()
 
